# rust-backend

./: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
configuration/: base.yaml  production.yaml
migrations/: 20220331221327_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
